[package]
name = "archon-tools"
version.workspace = true
edition.workspace = true

[dependencies]
archon-permissions = { path = "../archon-permissions" }
archon-memory = { path = "../archon-memory" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
glob.workspace = true
regex.workspace = true
reqwest.workspace = true
chrono.workspace = true
rand.workspace = true
cron.workspace = true
uuid.workspace = true
git2.workspace = true
dirs.workspace = true
async-lsp.workspace = true
lsp-types.workspace = true
tokio-util.workspace = true
tower.workspace = true
which.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
petgraph.workspace = true

[dev-dependencies]
tempfile.workspace = true
