[package]
name = "archon-tui-test-support"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros", "sync", "time"] }
ratatui = { workspace = true }
futures-util = "0.3"
tracing = "0.1"
regex-lite = "0.1"
insta = { version = "1", features = ["yaml"] }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
