[package]
name = "archon-tui"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
libloading.workspace = true
dirs.workspace = true
hound = { workspace = true }
async-trait.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
serde_json.workspace = true
archon-core = { path = "../archon-core" }
cpal = { workspace = true, optional = true }
futures-util = { workspace = true }
parking_lot = "0.12"
hdrhistogram = "7.5"

[dev-dependencies]
insta = { workspace = true }

[features]
default = []
terminal-panel = []
audio-capture = ["cpal"]
