[package]
name = "archon-tui"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
pulldown-cmark.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
libloading.workspace = true
dirs.workspace = true
hound = { workspace = true }
async-trait.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
serde_json.workspace = true
archon-core = { path = "../archon-core" }
cpal = { workspace = true, optional = true }
futures-util = { workspace = true }
parking_lot = "0.12"
hdrhistogram = "7.5"

[dev-dependencies]
insta = { workspace = true }
criterion.workspace = true
futures = "0.3"
procfs = "0.16"
# TASK-TUI-410: load test drives archon-tools directly (AgentTool,
# poll_background_agent, cancel_background_agent) per TECH-TUI-SUBAGENT
# implementation_notes. uuid + tokio-util needed for the test-local
# StubExecutor fixture reused from crates/archon-tools/tests/task_ags_104.rs.
archon-tools = { path = "../archon-tools" }
uuid = { workspace = true }
tokio-util = { workspace = true }

[[bench]]
name = "eventchannel_load"
path = "benches/eventchannel_load.rs"
harness = false

[[bench]]
name = "eventchannel_latency"
path = "benches/eventchannel_latency.rs"
harness = false

[features]
default = []
terminal-panel = []
audio-capture = ["cpal"]
