[package]
name = "archon-workflow"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
archon-llm = { path = "../archon-llm" }
async-trait.workspace = true
blake3.workspace = true
chrono.workspace = true
futures-util.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
